# RayLib-Asteroids

./: CMakeLists.txt  README.md
src/: asteroid.c  asteroid.h  constants.h  debug.c  debug.h  game_asteroids.c  game_asteroids.h  main.c  player.c  player.h  raygui.c  raygui.h
